fixed overflow-x and embed charts post

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -234,3 +234,7 @@ code {
   font-family: monospace;
   padding: 1px 5px;
 }
+
+pre {
+  overflow-x: auto;
+}
